--- a/src/app/header-money-transfer/header-money-transfer.component.scss
+++ b/src/app/header-money-transfer/header-money-transfer.component.scss
@@ -344,3 +344,56 @@ button:hover {
 .money-footer .container {
   top: 20px;
 }
+///////pop up favourite////
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
+.popup-content {
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  width: 300px;
+  transform: scale(0.8);
+  opacity: 0;
+  animation: scaleFadeIn 0.4s ease forwards;
+}
+
+.popup-animation {
+  margin-bottom: 10px;
+}
+
+.popup-message {
+  font-size: 1.2em;
+  margin-bottom: 20px;
+}
+
+.close-popup-btn {
+  background-color: #333;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+@keyframes scaleFadeIn {
+  from {
+    transform: scale(0.8);
+    opacity: 0;
+  }
+  to {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
