--- a/src/app/create-account/create-account.component.scss
+++ b/src/app/create-account/create-account.component.scss
@@ -89,6 +89,9 @@ form {
   left: 35%;
   margin-bottom: 100px;
 }
+.mat-progress-bar {
+  color: hsl(347, 64%, 32%) !important;
+}
 
 .footer {
   background-color: #f3e9eb;
