--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<footer class="container">
   <div class="container2 text-center">
     <div class="row align-items-start pinkc">
       <div class="col">
@@ -65,4 +65,4 @@
     />
     <p class="style10">ll Rights Reserved for Speedo Transfer ©2024</p>
   </div>
-</div>
+</footer>
