--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -86,3 +86,86 @@ nav {
 .mat-progress-bar {
   background-color: hsl(347, 64%, 32%) !important;
 }
+@media (max-width: 600px) {
+  nav {
+    position: fixed; /* Fix nav to the top */
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    background-color: white;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+    .item {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 12px;
+      color: #3c3a37;
+      font-weight: 500;
+      font-size: 16px; /* Adjust font size */
+      width: 100%; /* Full width for touch areas */
+      text-align: center;
+    }
+
+    .initial {
+      border: 1px solid;
+      border-radius: 50%;
+      font-size: 20px; /* Slightly smaller font size for smaller screens */
+      width: 40px; /* Adjust size for mobile */
+      height: 40px; /* Adjust size for mobile */
+      margin-right: 0;
+    }
+
+    .menu {
+      width: 100%;
+      padding-bottom: 10px;
+
+      button {
+        width: 100%; /* Full width for buttons */
+        height: 50px; /* Increase height for easier tap */
+        padding: 10px;
+        font-size: 16px; /* Adjust font size */
+        margin-bottom: 10px;
+        text-align: center;
+
+        &.active {
+          background-color: #871e35;
+          color: #ffffff;
+        }
+      }
+    }
+
+    .dropdown {
+      display: block;
+      position: absolute;
+      top: 60px;
+      left: 0;
+      background-color: #ffffff;
+      width: 100%;
+      max-width: 100%; /* no overflow */
+      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+      padding: 10px 0;
+      box-sizing: border-box;
+    }
+
+    .dropitems {
+      width: 100%;
+      padding: 10px;
+      font-size: 14px;
+      border-bottom: 1px solid #e3e2e2;
+      color: #3c3a37;
+      margin: 0;
+      text-align: center;
+    }
+
+    .loggout {
+      border-bottom: none !important;
+      border-style: none !important;
+    }
+  }
+}
