--- a/src/app/my-account/my-account.component.html
+++ b/src/app/my-account/my-account.component.html
@@ -77,7 +77,7 @@
   >
     <h1 class="font-[600] text-[24px] mb-7">My Profile</h1>
     <div class="balance-container mb-7">
-      <p class="balance-amount">10000$</p>
+      <p class="balance-amount">{{ balance | number : "1.2-2" }}</p>
       <span class="balance-text">Balance</span>
     </div>
     <p class="text-[#3C3A37] font-[500] mb-4">
