--- a/src/app/my-account/my-account.component.html
+++ b/src/app/my-account/my-account.component.html
@@ -2,7 +2,7 @@
   <li class="item relative">
     <div class="initial">{{ getUserInitials() }}</div>
     <button class="flex items-center space-x-2" (click)="toggleDropdown()">
-      <span>{{ user1.username }}</span>
+      <span *ngIf="user1">{{ user1.username }}</span>
       <img src="/assets/DRop_down.svg" />
     </button>
 
@@ -77,7 +77,7 @@
   >
     <h1 class="font-[600] text-[24px] mb-7">My Profile</h1>
     <div class="balance-container mb-7">
-      <p class="balance-amount">{{ balance | number : "1.2-2" }}</p>
+      <p class="balance-amount">{{ balance }}</p>
       <span class="balance-text">Balance</span>
     </div>
     <p class="text-[#3C3A37] font-[500] mb-4">
@@ -111,7 +111,7 @@
     </div>
   </div>
   <div
-    *ngIf="activeSection === 'settings'"
+    *ngIf="activeSection === 'settings' && user1"
     id="settings"
     class="setting"
     #settings
