--- a/src/app/country-dropdown/country-dropdown.component.scss
+++ b/src/app/country-dropdown/country-dropdown.component.scss
@@ -103,3 +103,10 @@ option img {
   margin-right: 8px;
   vertical-align: middle;
 }
+.grid-container .grid-item label {
+  position: relative;
+}
+.grid-container .grid-item input {
+  position: absolute;
+  top: 5%;
+}
