--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -38,7 +38,7 @@
     </div>
   </div>
 </div>
-<div style="padding: 150px 238.78px 0px 238.78px; gap: 0px">
+<div class="pt-[150px]">
   <p
     style="
       color: hsla(347, 64%, 32%, 1);
@@ -57,7 +57,7 @@
   <br />
   <p>text of the printing.</p>
 </div>
-<div class="container text-center ms-5 pt-4 pb-5">
+<div class="container text-center pt-4 pb-5">
   <div class="row">
     <div class="col">
       <div
